# project-starter

./: .gitignore  README.md  com.github.Latesil.project-starter.json  meson.build  org.github.Latesil.project-starter.json
.flatpak-builder/cache/: summary
.flatpak-builder/cache/refs/heads/app/com.github.Latesil.project-starter/x86_64/: master
.flatpak-builder/cache/refs/heads/x86_64-com.github.Latesil.project-starter.json/: build-project-starter  cleanup  finish  init
.flatpak-builder/checksums/: x86_64-com.github.Latesil.project-starter.json
.flatpak-builder/git/_var_home_late_Documents_Prog_project-starter/: FETCH_HEAD  config  shallow
build-dir/: metadata
build-dir/files/: manifest.json
build-dir/files/share/appdata/: com.github.Latesil.project-starter.appdata.xml
build-dir/files/share/glib-2.0/schemas/: gschemas.compiled
build-dir/files/share/project-starter/: project-starter.gresource
build-dir/files/share/project-starter/project_starter/: keyboard_shortcuts.py  main.py  python_template.py  rust_template.py
data/: com.github.Latesil.project-starter.appdata.xml.in  com.github.Latesil.project-starter.desktop.in  com.github.Latesil.project-starter.gschema.xml  meson.build  org.github.Latesil.project-starter.appdata.xml.in  org.github.Latesil.project-starter.desktop.in  org.github.Latesil.project-starter.gschema.xml
data/icons/: convert-icons-linux.sh
po/: POTFILES  com.github.Latesil.project-starter.pot  meson.build  nl.po  org.github.Latesil.project-starter.pot  ru.po
rpm/: project-starter.spec
src/: about_window.py  aboutwindow.ui  agpl.py  apache.py  c_template.py  common_files.py  file.py  gnome_extension_template.py  gpl.py  helpers.py  js_template.py  keyboard_shortcuts.py  keyboard_shortcuts.ui  main.py  meson.build  mit-x11.py  project-starter.in  project_starter.gresource.xml  project_starter_constants.py  python_template.py  rust_template.py  template.py  window.py  window.ui
src/licenses/: gpl.py  lgpl.py
src/templates/: python_template.py  template.py
